--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,5 +3,5 @@ artifacts_root: artifacts
 data_ingestion:
   root_dir: artifacts/data_ingestion
   source_url: https://github.com/entbappy/Branching-tutorial/raw/master/Chicken-fecal-images.zip
-  local_data_files: artifacts/data_ingestion/data.zip
+  local_data_file: 'artifacts/data_ingestion/data.zip'
   unzip_dir: artifacts/data_ingestion
