--- a/params.yaml
+++ b/params.yaml
@@ -1,1 +1,8 @@
-key: value
+Augmentation: True
+image_size: [224,224,3]
+batch_size: 16
+INCLUDE_TOP: False
+EPOCHS: 1
+CLASSES: 2
+WEIGHTS: Imagenet
+LEARNING_RATE: 0.01
