--- a/params.yaml
+++ b/params.yaml
@@ -1,8 +1,8 @@
 Augmentation: True
-image_size: [224,224,3]
+IMAGE_SIZE: [224,224,3]
 batch_size: 16
 INCLUDE_TOP: False
 EPOCHS: 1
 CLASSES: 2
-WEIGHTS: Imagenet
+WEIGHTS: imagenet
 LEARNING_RATE: 0.01
